# TinadecOffice

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  TinadecCode.slnx  TinadecOffice.slnx  package-lock.json  package.json
.cargo/: config.toml
.ponytail/: config.json  rules.md  validate.js
TinadecCore/: AGENTS.md  Directory.Build.props  Directory.Packages.props  TinadecCore.slnx
TinadecCore/Abstractions/: IModuleRegistrar.cs  ITinadecCoreBuilder.cs  TinadecCore.Abstractions.csproj
TinadecCore/Api/: Program.cs  TinadecCore.Api.csproj
TinadecCore/Context/: ContextModuleRegistrar.cs  TinadecCore.Context.csproj
TinadecCore/Contracts/: TinadecCore.Contracts.csproj
TinadecCore/DmaEA/: DmaEAModuleRegistrar.cs  TinadecCore.DmaEA.csproj
TinadecCore/Lifecycle/: LifecycleModuleRegistrar.cs  (+1 more)
TinadecGateway/: AGENTS.md  bunfig.toml  package.json  tsconfig.json
TinadecTools/: Program.cs  TinadecTools.csproj
TinadecTools.Generators/: ToolFunctionGenerator.cs
docs/: agent-debug-studio-plan.md  ai-tools-deployment-verification.md  ai-tools-implementation-report.md  ai-tools-integration-guide.md  ai-tools-quick-start.md  architecture-compliance-verification.md  architecture.md  corecoreplan.md  git-module-status-and-roadmap.md  reference-project-map.md  startup.md
gateway/: AGENTS.md
native/: Cargo.toml  UPSTREAM.md  test_input.json
native/glue/codex-apply-patch-lite/: Cargo.toml
native/glue/codex-exec-server-shim/: Cargo.toml
native/glue/codex-exec-server-shim/src/: lib.rs
scripts/: install-ai-tools.ps1  test-ai-tools.ps1
(+186 files in other folders)
