[package]
name = "codex-apply-patch"
version = "0.0.0"
edition = "2024"
license.workspace = true

[lib]
name = "codex_apply_patch"
path = "src/lib.rs"
doctest = false

[dependencies]
anyhow = "1"
codex-exec-server = { path = "../codex-exec-server-shim" }
codex-utils-absolute-path = { path = "../../codex-src/codex-rs/utils/absolute-path" }
similar = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt"] }
tree-sitter = "0.25"
tree-sitter-bash = "0.25"
