[package]
name = "codex-exec-server"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[lib]
name = "codex_exec_server"
path = "src/lib.rs"
doctest = false

[dependencies]
async-trait = "0.1"
codex-utils-absolute-path = { path = "../../codex-src/codex-rs/utils/absolute-path" }
once_cell = "1"
